add little responsive, restyle main

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -6,8 +6,7 @@
   justify-content: space-between;
 
   .content {
-    background: rgb(219,223,225);
-    background: linear-gradient(0deg, rgba(219,223,225,1) 17%, rgba(203,207,209,1) 38%, rgba(190,193,195,1) 50%, rgba(142,144,146,1) 71%, rgba(86,87,88,1) 100%);
+    background: #ededef;
 
     .links {
       padding: 0 20px;
