--- a/src/app/components/catalog/catalog.component.html
+++ b/src/app/components/catalog/catalog.component.html
@@ -16,3 +16,17 @@
     </div>
   </div>
 </div>
+
+<!--
+<div class="img__wrap">
+  <img class="img__image" src="/assets/images/our-work-1.jpg"/>
+  <p class="img__description">Чистка, ремонт, монтаж каминов, дымоходов и банных печей</p>
+</div>
+<div class="img__wrap">
+  <img class="img__image" src="/assets/images/our-work-7.jpg"/>
+  <p class="img__description">Обследование печных труб, дымоходов, печей.</p>
+</div>
+<div class="img__wrap">
+  <img class="img__image" src="/assets/images/our-work-1.jpg"/>
+  <p class="img__description">Ремонт дымохода, печи, котла, камина.</p>
+</div>-->
