--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -1,32 +1,46 @@
 <div class="about-us">
   <div class="about-us__container">
-    <div id="yandex-map" class="yandex-map">
-
+    <div class="advantages">
+      <div class="advantages__container">
+        <div class="advantages__title">
+          <h2>Работая с нами, Вы получаете</h2>
+        </div>
+        <div class="advantages__list">
+          <div class="advantage quality">
+            <div class="quality__image"></div>
+            <div class="quality__container">
+              <div class="advantage__title">
+                Качество и гарантии
+              </div>
+              <div class="advantage__body">
+                Мы не навязываем своих услуг, если в них нет нужды. Но если вы обратились к нам за очисткой дымовых и
+                вентиляционных систем, будьте уверены - свою работу выполним качественно и предоставим на нее гарантии.
+              </div>
+            </div>
+          </div>
+          <div class="advantage security">
+            <div class="security__image"></div>
+            <div class="security__container">
+              <div class="advantage__title ">
+                Безопасность
+              </div>
+              <div class="advantage__description">
+                Ваша безопасность и спокойствие – наша ответственность.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="about-us__info">
-      <!--<div class="name">
-        ИП:
-        Ходневич Константин Андреевич
+    <div class="info">
+      <div id="yandex-map" class="info__yandex-map">
       </div>
-      <div class="phone">
-        Телефон: <a class="phone__link" href="tel: +375296030773">+375296030773</a>
+      <div class="info__about-me">
+        <div class="individual-predpr"> ИП: Ходневич Константин Андреевич
+        </div>
+        <div class="address">г.Минск, ул. М.Богдановича, 118 п60</div>
+        <div class="unp">УНП: 190953454</div>
       </div>
-      <div class="email">
-        Email: <a href="mailto:chistim911@gmail.com">chistim911@gmail.com</a>
-      </div>
-      <div class="IP">
-
-      </div>
-      <div class="UNP">
-        УНП: 190953454
-      </div>-->
-      Индивидуальный Предприниматель
-      Ходневич Константин Андреевич
-      г.Минск, ул. М.Богдановича, 118 п60
-      ОАО «Приорбанк» ЦБУ №111код 749
-      р\с BY35PJCB30130118411000000933
-      БИК PJCBBY2X;   УНП 190953454
-      220020 г.Минск , пр.Машерова ,40
     </div>
   </div>
 </div>
