--- a/src/app/components/main-page/main-page.component.less
+++ b/src/app/components/main-page/main-page.component.less
@@ -1,12 +1,18 @@
 .main {
 
+  .background-image {
+    width: 100%;
+    text-align: center;
+    background-image: url(/assets/images/our-work-2.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 400px;
+
+  }
+
   &__container {
-    margin: 48px auto;
-    box-shadow: 0 0 29px 5px rgba(0, 0, 0, 0.3);
-    border-radius: 20px;
+    margin: 0 auto;
     max-width: 1280px;
-    padding: 24px;
-    background-color: #dfe1e6;
   }
 
   &__our-services {
@@ -15,14 +21,15 @@
     align-items: center;
   }
 
-  .our-services, .advantages, .feedback {
-    background-color: #dfe1e6;
+  .our-services, .feedback, .our-work {
+    background-color: #ededef;
+    padding: 48px 0 0;
 
     &__title {
       font-size: 24px;
       font-family: sans-serif;
       font-weight: bold;
-      padding-bottom: 12px;
+      padding-bottom: 24px;
       width: 100%;
       text-align: center;
     }
@@ -35,121 +42,38 @@
     }
   }
 
+  .our-work {
+    display: flex;
+
+    &__items {
+      display: flex;
+      flex-wrap: wrap;
+
+      .work-item {
+        margin: 12px auto;
+        box-shadow: 0 0 29px 5px rgba(0, 0, 0, 0.3);
+        border-radius: 20px;
+        padding: 24px;
+        width: calc(50% - 24px);
+        background-color: #dfe1e6;
+
+        &__image {
+          width: 100%;
+          max-height: 400px;
+        }
+      }
+    }
+
+
+  }
+
   .our-services {
     &__items {
       width: 100%;
 
-      .rounded {
-        counter-reset: li;
-        list-style: none;
-        font: 14px "Trebuchet MS", "Lucida Sans";
-        padding: 0;
-        text-shadow: 0 1px 0 rgba(255, 255, 255, .5);
-        width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-
-        &__list {
-          width: 50%;
-
-          &:nth-child(odd) {
-            padding-right: 48px;
-          }
-        }
-
-        &__link {
-          position: relative;
-          display: block;
-          padding: 0.4em 0.4em 0.4em 2.5em;
-          margin: .5em 0;
-          background: #FF9E41;
-          color: #444;
-          text-decoration: none;
-          border-radius: 22px;
-          transition: .3s ease-out;
-          font-size: 18px;
-
-          &:hover {
-            background: #E9E4E0;
-          }
-
-          &:hover:before {
-            transform: rotate(360deg);
-          }
-
-          &:before {
-            content: counter(li);
-            counter-increment: li;
-            position: absolute;
-            left: -1px;
-            top: 50%;
-            margin-top: -1em;
-            background: #8FD4C1;
-            height: 2em;
-            width: 2em;
-            line-height: 1.5em;
-            border: .3em solid white;
-            text-align: center;
-            font-weight: bold;
-            border-radius: 2em;
-            transition: all .3s ease-out;
-          }
-        }
-      }
-    }
-  }
-
-  &__advantages {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: Ebrima;
-  }
-
-  .advantages {
-    &__list {
-      width: 50%;
-      display: flex;
-      flex-wrap: wrap;
-
-      .advantage {
-        padding-bottom: 32px;
-
-        &__title {
-          font-weight: bold;
-          font-size: 24px;
-        }
-
-        &__description {
-          font-size: 18px;
-        }
-      }
-
-      .quality {
-        display: flex;
-
-        &__image {
-          background: url(/assets/images/quality.svg) 0 0 no-repeat;
-          min-width: 80px;
-        }
-
-        &__container {
-          padding-left: 20px;
-        }
-      }
-
-      .security {
-        display: flex;
-
-        &__image {
-          background: url(/assets/images/security.svg) 0 0 no-repeat;
-          width: 80px;
-          height: 80px;
-        }
-
-        &__container {
-          padding-left: 20px;
-        }
+      .service-item {
+        text-align: center;
+        font-size: 20px;
       }
     }
   }
@@ -167,6 +91,40 @@
 
     &__body {
       font-family: Ebrima;
+    }
+  }
+
+  &__contact-info {
+    text-align: center;
+    font-size: 28px;
+    padding: 24px;
+  }
+
+  @media (max-width: 575px) {
+    padding: 0 12px;
+
+    .our-work {
+      &__items {
+        display: block;
+
+        .work-item {
+          margin: 12px auto;
+          box-shadow: none;
+          border-radius: 20px;
+          padding: 12px 0;
+          width: 100%;
+          background-color: transparent;
+        }
+      }
+    }
+
+    .our-services {
+      &__items {
+
+        .service-item {
+          font-size: 16px;
+        }
+      }
     }
   }
 }
