--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -1,6 +1,6 @@
 <div class="error-404">
   <h1>
-    Извините, но по вашему запросу ничего не найдено
+    Упс! Данной страницы не существует или ее удалили;(
   </h1>
 </div>
 
