--- a/src/assets/shared-styles/shared-styles.less
+++ b/src/assets/shared-styles/shared-styles.less
@@ -1,4 +1,26 @@
+@background-color: #ededef;
+@text-color: #000000;
+@header-footer-background: #dbdfe1;
+@links-color: #FF9E41;
+
 .default-text {
-  font-size: 22px;
+  font-size: 16px;
   line-height: 32px;
+}
+
+.title-text {
+  font-size: 22px;
+}
+
+.catalog-image {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position-x: 60%;
+}
+
+.social-icon {
+  height: 40px;
+  width: 40px;
+  margin-left: 24px;
+  background-size: contain;
 }
