--- a/src/assets/styles/app.component.less
+++ b/src/assets/styles/app.component.less
@@ -1,3 +1,5 @@
+@import "../shared-styles/shared-styles.less";
+
 .wrapper {
   position: relative;
   min-height: 100%;
@@ -6,7 +8,7 @@
   justify-content: space-between;
 
   .content {
-    background: #ededef;
+    background-color: @background-color;
 
     .links {
       padding: 0 20px;
