--- a/src/assets/styles/app.component.less
+++ b/src/assets/styles/app.component.less
@@ -8,7 +8,7 @@
   justify-content: space-between;
 
   .content {
-    background-color: @background-color;
+    //background-color: @background-color;
 
     .links {
       padding: 0 20px;
