--- a/src/assets/styles/main-page.component.less
+++ b/src/assets/styles/main-page.component.less
@@ -8,7 +8,6 @@
     background-size: cover;
     background-repeat: no-repeat;
     height: 400px;
-
   }
 
   &__container {
@@ -23,7 +22,7 @@
   }
 
   .our-services, .feedback, .our-work {
-    background-color: @background-color;
+    //background-color: @background-color;
     padding: 48px 0 0;
 
     &__title {
@@ -73,8 +72,12 @@
       width: 100%;
 
       .service-item {
-        text-align: center;
+        background-color: aliceblue;
+        margin: 12px 0;
+        min-height: 40px;
         font-size: 20px;
+        border-radius: 15px;
+        padding: 12px;
       }
     }
   }
