--- a/src/assets/shared-styles/shared-styles.less
+++ b/src/assets/shared-styles/shared-styles.less
@@ -24,3 +24,10 @@
   margin-left: 24px;
   background-size: contain;
 }
+
+/*media queries*/
+
+@big-phone-screen: ~"(max-width: 899px)";
+@tablet-screen: ~"(min-width: 900px) and (max-width: 1280px)";
+@desktop-screen: ~"(min-width: 1280px)";
+
