--- a/src/app/components/catalog/catalog.component.html
+++ b/src/app/components/catalog/catalog.component.html
@@ -1,32 +1,9 @@
 <div class="catalog">
   <div class="catalog__container">
     <div class="catalog__items">
-      <div class="item first">
+      <div class="item" *ngFor="let work of ourWork">
+        <img [src]="work" alt="Examples of our work" class="item__images">
       </div>
-      <div class="item second">
-      </div>
-      <div class="item third">
-      </div>
-    </div>
-
-    <div class="catalog__item-info">
-      <div class="item-info"></div>
-      <div class="item-info"></div>
-      <div class="item-info"></div>
     </div>
   </div>
 </div>
-
-<!--
-<div class="img__wrap">
-  <img class="img__image" src="/assets/images/our-work-1.jpg"/>
-  <p class="img__description">Чистка, ремонт, монтаж каминов, дымоходов и банных печей</p>
-</div>
-<div class="img__wrap">
-  <img class="img__image" src="/assets/images/our-work-7.jpg"/>
-  <p class="img__description">Обследование печных труб, дымоходов, печей.</p>
-</div>
-<div class="img__wrap">
-  <img class="img__image" src="/assets/images/our-work-1.jpg"/>
-  <p class="img__description">Ремонт дымохода, печи, котла, камина.</p>
-</div>-->
