--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,22 +5,28 @@
         <div class="links" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
           <span>Главная</span>
         </div>
-        <div class="links" routerLink="/service" routerLinkActive="active"
+        <div class="links" routerLink="/gallery" routerLinkActive="active"
              [routerLinkActiveOptions]="{exact:true}">
-          <span>Услуги</span>
+          <span>Галерея</span>
         </div>
         <div class="links" routerLink="/about-us" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
-          <span>О нас</span>
+          <span>Контакты</span>
         </div>
+        <!--todo Лицензии
+        <div class="links" routerLink="/about-us" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+          <span>Лицензии</span>
+        </div
+        -->
+
       </div>
       <div class="menu-icon" (click)="openMenu()">
-        <a href="javascript:void(0);" class="icon" ></a>
+        <a href="javascript:void(0);" class="icon"></a>
       </div>
     </div>
     <div class="header__phone phone">
       <div class="phone__icon" (click)="call()"></div>
       <div class="phone__number" (click)="call()">
-        <a class="phone__number" href="tel: +375296030773">+375296030773</a>
+        <a class="phone__number" href="tel: +375296030773">+375 (29) 603-07-73</a>
       </div>
     </div>
     <div class="header__contact-info">
@@ -28,20 +34,23 @@
         <div class="social-links__facebook" (click)="goToSocialNetwork('facebook')"></div>
         <!--        <div class="social-links__vk" (click)="goToSocialNetwork('vk')"></div>-->
         <div class="social-links__telegram" (click)="goToSocialNetwork('telegram')"></div>
-        <!--        <div class="social-links__instagram" (click)="goToSocialNetwork('instagram')"></div>-->
-        <div class="social-links__youtube" (click)="goToSocialNetwork('youtube')"></div>
+        <div class="social-links__instagram" (click)="goToSocialNetwork('instagram')"></div>
+        <!--        <div class="social-links__youtube" (click)="goToSocialNetwork('youtube')"></div>-->
       </div>
     </div>
   </div>
+  <app-our-services></app-our-services>
   <div class="header__small-menu" id="small-menu" [ngClass]="menuOpened ? 'opened' : ''">
-    <div (click)="openMenu()" class="links" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+    <div (click)="openMenu()" class="links" routerLink="/" routerLinkActive="active"
+         [routerLinkActiveOptions]="{exact:true}">
       <span>Главная</span>
     </div>
     <div (click)="openMenu()" class="links" routerLink="/service" routerLinkActive="active"
          [routerLinkActiveOptions]="{exact:true}">
       <span>Услуги</span>
     </div>
-    <div (click)="openMenu()" class="links" routerLink="/about-us" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+    <div (click)="openMenu()" class="links" routerLink="/about-us" routerLinkActive="active"
+         [routerLinkActiveOptions]="{exact:true}">
       <span>О нас</span>
     </div>
   </div>
