--- a/src/assets/styles/catalog.component.less
+++ b/src/assets/styles/catalog.component.less
@@ -5,36 +5,21 @@
   min-height: calc(100vh - 189px);
 
   &__container {
-    max-width: 1280px;
+
     margin: 0 auto;
   }
 
   &__items {
     display: flex;
-
+    flex-wrap: wrap;
     .item {
-      margin: 48px auto;
-      border-radius: 20px;
-      max-width: 1280px;
+      width: 33%;
       padding: 24px;
-      height: 100%;
-      width: calc(33% - 24px);
-      min-height: 400px;
-    }
 
-    .first {
-      background-image: url(/assets/images/our-work-2.jpg);
-      .catalog-image();
-    }
-
-    .second {
-      background-image: url(/assets/images/our-work-7.jpg);
-      .catalog-image();
-    }
-
-    .third {
-      background-image: url(/assets/images/our-work-12.jpg);
-      .catalog-image();
+      &__images {
+        width: 100%;
+        height: 400px;
+      }
     }
   }
 }
