--- a/src/assets/styles/header.component.less
+++ b/src/assets/styles/header.component.less
@@ -4,8 +4,9 @@
   padding: 0;
   background: url(/assets/images/chimney-sweep.jpg) no-repeat;
   background-size: cover;
-  height: 600px;
-  background-position-y: 30%;
+  height: 700px;
+  background-position-y: 50%;
+  background-position-x: 34%;
 
   &__container {
     display: flex;
@@ -40,8 +41,11 @@
       }
 
       &:hover {
-        color: #CBCACA;
         cursor: pointer;
+      }
+
+      &:hover:not(.active) {
+        color: #CBCACA;
       }
     }
 
@@ -109,7 +113,7 @@
     display: none;
   }
 
-  @media (min-width: 900px) and (max-width: 1280px) {
+  @media @tablet-screen {
     &__pages {
       font-size: 22px;
     }
@@ -125,7 +129,7 @@
     }
   }
 
-  @media (max-width: 899px) {
+  @media @big-phone-screen {
 
     &__container {
       padding: 12px;
