--- a/src/assets/styles/main-page.component.less
+++ b/src/assets/styles/main-page.component.less
@@ -13,72 +13,9 @@
   &__container {
     margin: 0 auto;
     max-width: 1280px;
-  }
 
-  &__our-services {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .our-services, .feedback, .our-work {
-    //background-color: @background-color;
-    padding: 48px 0 0;
-
-    &__title {
-      font-size: 24px;
-      font-family: sans-serif;
-      font-weight: bold;
-      padding-bottom: 24px;
-      width: 100%;
-      text-align: center;
-    }
-
-    &__container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      width: 100%;
-    }
-  }
-
-  .our-work {
-    display: flex;
-
-    &__items {
-      display: flex;
-      flex-wrap: wrap;
-
-      .work-item {
-        margin: 12px auto;
-        box-shadow: 0 0 29px 5px rgba(0, 0, 0, 0.3);
-        border-radius: 20px;
-        padding: 24px;
-        width: calc(50% - 24px);
-        background-color: #dfe1e6;
-
-        &__image {
-          width: 100%;
-          max-height: 400px;
-        }
-      }
-    }
-
-
-  }
-
-  .our-services {
-    &__items {
-      width: 100%;
-
-      .service-item {
-        background-color: aliceblue;
-        margin: 12px 0;
-        min-height: 40px;
-        font-size: 20px;
-        border-radius: 15px;
-        padding: 12px;
-      }
+    app-our-services {
+      display: none;
     }
   }
 
@@ -90,6 +27,54 @@
     &__container {
       &:focus, ngb-carousel.carousel.slide:focus {
         outline: none;
+      }
+
+      .astrodivider {
+        margin: 24px auto;
+        width: 100%;
+        position: relative;
+      }
+
+      .astrodividermask {
+        overflow: hidden;
+        height: 20px;
+      }
+
+      .astrodividermask:after {
+        content: '';
+        display: block;
+        margin: -25px auto 0;
+        width: 100%;
+        height: 25px;
+        border-radius: 125px / 12px;
+        box-shadow: 0 0 8px @links-color;
+      }
+
+      .astrodivider span {
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        bottom: 100%;
+        margin-bottom: -25px;
+        left: 50%;
+        margin-left: -25px;
+        border-radius: 100%;
+        box-shadow: 0 2px 4px @links-color;
+        background: #fff;
+      }
+
+      .astrodivider i {
+        position: absolute;
+        top: 4px;
+        bottom: 4px;
+        left: 4px;
+        right: 4px;
+        border-radius: 100%;
+        border: 1px dashed #68beaa;
+        text-align: center;
+        line-height: 40px;
+        font-style: normal;
+        color: @links-color;
       }
     }
 
