add nodemailer and back

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -1,5 +1,19 @@
 <div class="about-us">
   <div class="about-us__container">
+    <div class="about-us__feedback-form">
+      <div class="form" [formGroup]="emailForm">
+        <mat-form-field class="example-full-width">
+          <input matInput placeholder="Ваше имя" formControlName="name" >
+        </mat-form-field>
+        <mat-form-field class="example-full-width">
+          <input matInput placeholder="Email" formControlName="email" >
+        </mat-form-field>
+        <mat-form-field class="example-full-width">
+          <input matInput placeholder="Сообщение" formControlName="message" >
+        </mat-form-field>
+        <button (click)="sendMail()">Send Message</button>
+      </div>
+    </div>
     <div class="info">
       <div id="yandex-map" class="info__yandex-map">
       </div>
