--- a/src/assets/styles/about-us.component.less
+++ b/src/assets/styles/about-us.component.less
@@ -75,5 +75,14 @@
       }
     }
   }
+
+  &__feedback-form {
+    margin: 0 auto;
+
+    .form {
+      display: flex;
+      flex-direction: column;
+    }
+  }
 }
 
