--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -1,6 +1,6 @@
 <div class="about-us">
   <div class="about-us__container">
-    <div class="about-us__feedback-form">
+    <!--<div class="about-us__feedback-form">
       <div class="form" [formGroup]="emailForm">
         <mat-form-field class="example-full-width">
           <input matInput placeholder="Ваше имя" formControlName="name" >
@@ -13,7 +13,7 @@
         </mat-form-field>
         <button (click)="sendMail()">Send Message</button>
       </div>
-    </div>
+    </div>-->
     <div class="info">
       <div id="yandex-map" class="info__yandex-map">
       </div>
