--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -39,15 +39,15 @@
       </div>
     </div>
   </div>
-  <app-our-services></app-our-services>
+  <app-our-services class="our-services"></app-our-services>
   <div class="header__small-menu" id="small-menu" [ngClass]="menuOpened ? 'opened' : ''">
     <div (click)="openMenu()" class="links" routerLink="/" routerLinkActive="active"
          [routerLinkActiveOptions]="{exact:true}">
       <span>Главная</span>
     </div>
-    <div (click)="openMenu()" class="links" routerLink="/service" routerLinkActive="active"
+    <div (click)="openMenu()" class="links" routerLink="/gallery" routerLinkActive="active"
          [routerLinkActiveOptions]="{exact:true}">
-      <span>Услуги</span>
+      <span>Галерея</span>
     </div>
     <div (click)="openMenu()" class="links" routerLink="/about-us" routerLinkActive="active"
          [routerLinkActiveOptions]="{exact:true}">
