--- a/src/app/components/our-services/our-services.component.html
+++ b/src/app/components/our-services/our-services.component.html
@@ -1,5 +1,5 @@
 <div class="services__title">
-  <h1>Профессиональные услуги трубочиста</h1>
+  <h1 class="title">Профессиональные услуги трубочиста</h1>
   <div class="services__container">
     <div class="services__item">
       <div class="services__img chimney"></div>
