--- a/src/assets/shared-styles/shared-styles.less
+++ b/src/assets/shared-styles/shared-styles.less
@@ -27,7 +27,8 @@
 
 /*media queries*/
 
-@big-phone-screen: ~"(max-width: 899px)";
-@tablet-screen: ~"(min-width: 900px) and (max-width: 1280px)";
+@max-phone: ~"(max-width: 670px)";
+@max-tablet: ~"(max-width: 899px)";
+@max-laptop: ~"(max-width: 1280px)";
 @desktop-screen: ~"(min-width: 1280px)";
 
