--- a/src/assets/styles/about-us.component.less
+++ b/src/assets/styles/about-us.component.less
@@ -1,66 +1,11 @@
+@import "../shared-styles/shared-styles.less";
+
 .about-us {
   &__container {
 
-    .advantages {
-      max-width: 1280px;
-      margin: 0 auto;
-
-      &__container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-
-      &__list {
-        width: 50%;
-        display: flex;
-        flex-wrap: wrap;
-
-        .advantage {
-          padding-bottom: 32px;
-
-          &__title {
-            font-weight: bold;
-            font-size: 24px;
-          }
-
-          &__description {
-            font-size: 18px;
-          }
-        }
-
-        .quality {
-          display: flex;
-
-          &__image {
-            background: url(/assets/images/quality.svg) 0 0 no-repeat;
-            min-width: 80px;
-          }
-
-          &__container {
-            padding-left: 20px;
-          }
-        }
-
-        .security {
-          display: flex;
-
-          &__image {
-            background: url(/assets/images/security.svg) 0 0 no-repeat;
-            width: 80px;
-            height: 80px;
-          }
-
-          &__container {
-            padding-left: 20px;
-          }
-        }
-      }
-
-    }
-
     .info {
       display: flex;
+
       &__yandex-map {
         height: calc(100vh - 189px);
         width: 50%;
@@ -74,15 +19,27 @@
         padding-left: 48px;
       }
     }
-  }
 
-  &__feedback-form {
-    margin: 0 auto;
+    @media @max-phone {
+      .info {
+        display: block;
 
-    .form {
-      display: flex;
-      flex-direction: column;
+        &__yandex-map {
+          height: calc(100vh - 189px);
+          width: 100%;
+        }
+
+        &__about-me {
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          padding-left: 48px;
+        }
+      }
     }
   }
+
+
 }
 
