--- a/src/assets/styles/our-services.component.less
+++ b/src/assets/styles/our-services.component.less
@@ -6,7 +6,12 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    padding: 48px 24px 0 0;
+
+    h1 {
+      font-size: 32px;
+    }
+
   }
 
   &__container {
@@ -42,5 +47,24 @@
   &__text {
     padding-left: 12px;
     font-size: 20px;
+  }
+
+  @media @max-tablet {
+
+    &__title {
+      padding: 12px 24px 0 0;
+      h1 {
+        font-size: 24px;
+      }
+    }
+
+    &__item {
+      padding: 12px 12px 12px 0;
+    }
+
+    &__text {
+      padding-left: 12px;
+      font-size: 16px;
+    }
   }
 }
