--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -5,7 +5,6 @@
         <app-our-services></app-our-services>
       </div>
     </div>
-
     <div class="main__feedback feedback">
       <div class="feedback__title">
         <h2>С нами сотрудничают</h2>
@@ -14,12 +13,14 @@
         <ngb-carousel *ngIf="images" style="width: 100%;">
           <ng-template ngbSlide *ngFor="let cafe of cafes">
             <h2 style="text-align: center">{{cafe.title}}</h2>
-            <div class="astrodivider"><div class="astrodividermask"></div><span><i>&#10038;</i></span></div>
+            <div class="astrodivider">
+              <div class="astrodividermask"></div>
+              <span><i>&#10038;</i></span></div>
             <div class="picsum-img-wrapper" style="width: 100%;">
               <img [src]="cafe.img" alt="Random first slide" style="width: 100%;">
             </div>
             <div class="carousel-caption">
-
+              Text from cafe
             </div>
           </ng-template>
         </ngb-carousel>
