--- a/src/assets/styles/header.component.less
+++ b/src/assets/styles/header.component.less
@@ -130,7 +130,7 @@
   }
 
   @media @max-phone {
-
+    height: 350px;
     background-position-x: 18%;
 
     &__phone {
@@ -167,6 +167,9 @@
       display: block;
       height: calc(100vh - 65px);
       background: white;
+      position: absolute;
+      top: 65px;
+      width: 100%;
 
       .links {
         padding: 24px;
