--- a/src/assets/styles/our-services.component.less
+++ b/src/assets/styles/our-services.component.less
@@ -67,4 +67,19 @@
       font-size: 16px;
     }
   }
+
+  @media @max-phone {
+    &__title {
+      margin: 0;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      padding: 24px 0;
+
+      h1 {
+        font-size: 32px;
+      }
+
+    }
+  }
 }
