--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -7,12 +7,28 @@
       <div id="yandex-map" class="info__yandex-map">
       </div>
       <div class="info__about-me">
-        <div class="individual-predpr"> ИП: Ходневич Константин Андреевич
+
+        <div class="phone">
+          <div class="phone__icon"></div>
+          <div class="phone__number">
+            <a class="phone-link" href="tel: +375296030773">+375 (29) 603-07-73</a>
+          </div>
         </div>
-        <div class="address">г.Минск, ул. М.Богдановича, 118 п60</div>
+
+        <div class="email">
+          <div class="email__icon"></div>
+          <div class="email__value">chistim911@gmail.com</div>
+        </div>
+
+        <div class="address">
+          <div class="address__icon"></div>
+          <div class="address__location">
+            г. Минск, ул. М.Богдановича, 118 п. 60
+          </div>
+        </div>
+        <div class="individual-predpr"><span class="ip"> ИП: </span>Ходневич Константин Андреевич</div>
         <div class="unp">УНП: 190953454</div>
       </div>
     </div>
   </div>
 </div>
-
