--- a/src/assets/styles/footer.component.less
+++ b/src/assets/styles/footer.component.less
@@ -12,28 +12,28 @@
     cursor: pointer;
 
     &__facebook {
-      background: url(/assets/images/facebook.svg) 0 0 no-repeat;
+      background: url(/assets/images/icons/facebook.svg) 0 0 no-repeat;
       .social-icon();
       margin: 0;
     }
 
     &__instagram {
-      background: url(/assets/images/instagram.svg) 0 0 no-repeat;
+      background: url(/assets/images/icons/instagram.svg) 0 0 no-repeat;
       .social-icon();
     }
 
     &__youtube {
-      background: url(/assets/images/youtube.svg) 0 0 no-repeat;
+      background: url(/assets/images/iconsyoutube.svg) 0 0 no-repeat;
       .social-icon();
     }
 
     &__telegram {
-      background: url(/assets/images/telegram.svg) 0 0 no-repeat;
+      background: url(/assets/images/icons/telegram.svg) 0 0 no-repeat;
       .social-icon();
     }
 
     &__vk {
-      background: url(/assets/images/vk.svg) 0 0 no-repeat;
+      background: url(/assets/images/iconsvk.svg) 0 0 no-repeat;
       .social-icon();
     }
   }
