--- a/src/assets/styles/header.component.less
+++ b/src/assets/styles/header.component.less
@@ -66,27 +66,27 @@
       cursor: pointer;
 
       &__facebook {
-        background: url(/assets/images/facebook.svg) 0 0 no-repeat;
+        background: url(/assets/images/icons/facebook.svg) 0 0 no-repeat;
         .social-icon();
       }
 
       &__instagram {
-        background: url(/assets/images/instagram.svg) 0 0 no-repeat;
+        background: url(/assets/images/icons/instagram.svg) 0 0 no-repeat;
         .social-icon();
       }
 
       &__youtube {
-        background: url(/assets/images/youtube.svg) 0 0 no-repeat;
+        background: url(/assets/images/icons/youtube.svg) 0 0 no-repeat;
         .social-icon();
       }
 
       &__telegram {
-        background: url(/assets/images/telegram.svg) 0 0 no-repeat;
+        background: url(/assets/images/icons/telegram.svg) 0 0 no-repeat;
         .social-icon();
       }
 
       &__vk {
-        background: url(/assets/images/vk.svg) 0 0 no-repeat;
+        background: url(/assets/images/icons/vk.svg) 0 0 no-repeat;
         .social-icon();
       }
     }
@@ -97,7 +97,7 @@
 
     .phone {
       &__icon {
-        background: url(/assets/images/phone.svg) 0 0 no-repeat;
+        background: url(/assets/images/icons/phone.svg) 0 0 no-repeat;
         .social-icon();
       }
 
@@ -158,7 +158,7 @@
     }
 
     .menu-icon {
-      background: url(/assets/images/menu.svg) 0 0 no-repeat;
+      background: url(/assets/images/icons/menu.svg) 0 0 no-repeat;
       .social-icon();
       margin-left: 12px;
     }
