--- a/src/assets/styles/our-services.component.less
+++ b/src/assets/styles/our-services.component.less
@@ -16,19 +16,19 @@
 
   &__container {
     .pot {
-      background-image: url(/assets/images/boilers.svg);
+      background-image: url(/assets/images/icons/boilers.svg);
     }
 
     .chimney {
-      background-image: url(/assets/images/chimney-icon.svg);
+      background-image: url(/assets/images/icons/chimney-icon.svg);
     }
 
     .check {
-      background-image: url(/assets/images/functional.svg);
+      background-image: url(/assets/images/icons/functional.svg);
     }
 
     .act {
-      background-image: url(/assets/images/document.svg);
+      background-image: url(/assets/images/icons/document.svg);
     }
   }
 
@@ -80,6 +80,10 @@
         font-size: 32px;
       }
 
+    }
+
+    &__item {
+      padding: 12px 0;
     }
   }
 }
