--- a/src/assets/styles/catalog.component.less
+++ b/src/assets/styles/catalog.component.less
@@ -2,7 +2,6 @@
 
 .catalog {
   height: 100%;
-  min-height: calc(100vh - 189px);
 
   &__container {
 
@@ -12,6 +11,8 @@
   &__items {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+
     .item {
       width: 33%;
       padding: 24px;
@@ -23,31 +24,41 @@
     }
   }
 
+  app-our-services {
+    display: none;
+  }
+
   @media @max-phone {
     &__items {
       display: block;
+
       .item {
         width: 100%;
         padding: 24px;
 
         &__images {
-            width: 100%;
-            height: 100%;
-          }
+          width: 100%;
+          height: 100%;
+        }
       }
     }
+
     app-our-services {
       display: block;
+      padding: 0 24px;
     }
   }
 
   @media @max-tablet {
+    padding: 0;
     &__items {
       display: flex;
       flex-wrap: wrap;
+
       .item {
         width: 50%;
-        padding: 24px;
+        padding: 12px 0;
+        min-height: 200px;
 
         &__images {
           width: 100%;
